log
Fri 12 Aug 2022 04:44:11 PM UTC: 
 tests:  0|7
total_score: 0/70
fb3a07f
Fri 12 Aug 2022 04:48:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f4dff42
Fri 12 Aug 2022 05:24:05 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|6
total_score: 10/70
69cb3ca
Fri 12 Aug 2022 05:27:19 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:41:14: error: value computed is not used [-Werror=unused-value]
   41 |   sumaN(a,n) - sumaN(a,n-m);
      |   ~~~~~~~~~~~^~~~~~~~~~~~~~
exercises.c:40:10: error: unused variable ‘tot’ [-Werror=unused-variable]
   40 |   int i, tot = 0;
      |          ^~~
exercises.c:40:7: error: unused variable ‘i’ [-Werror=unused-variable]
   40 |   int i, tot = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
fcc2584
Fri 12 Aug 2022 05:27:30 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:14: error: value computed is not used [-Werror=unused-value]
   40 |   sumaN(a,n) - sumaN(a,n-m);
      |   ~~~~~~~~~~~^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dbae9b7
Fri 12 Aug 2022 05:27:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:15: error: value computed is not used [-Werror=unused-value]
   40 |   (sumaN(a,n) - sumaN(a,n-m));
      |   ~~~~~~~~~~~~^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
879e8a3
Fri 12 Aug 2022 05:29:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:13: error: value computed is not used [-Werror=unused-value]
   40 |   sumaN(a,n)-sumaN(a,n-m);
      |   ~~~~~~~~~~^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
65d5b9c
Fri 12 Aug 2022 05:29:48 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: variable ‘tot’ set but not used [-Werror=unused-but-set-variable]
   40 |   int tot = 0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
60b5930
Fri 12 Aug 2022 05:29:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: variable ‘tot’ set but not used [-Werror=unused-but-set-variable]
   40 |   int tot;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
9f8b9c0
Fri 12 Aug 2022 05:31:17 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
126c9b7
